--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mngo-project-tools",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "homepage": "./",
@@ -13,7 +13,11 @@
     "type": "git",
     "url": "git@github.com:adityasuman2025/MNgoProjectTools.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "crypto-js": "^4.0.0",
+    "dayjs": "^1.10.4",
+    "universal-cookie": "^4.0.4"
+  },
   "devDependencies": {
     "@babel/cli": "^7.15.4",
     "@babel/preset-env": "^7.15.4",
@@ -22,13 +26,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "babel-preset-minify": "^0.5.1",
-    "crypto-js": "^4.0.0",
-    "dayjs": "^1.10.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
-    "universal-cookie": "^4.0.4"
+    "typescript": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
