--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,43 +1,21 @@
 {
-    "compilerOptions": {
-      "outDir": "lib/esm",
-      "module": "esnext",
-      "target": "es6",
-      "lib": [
-        "es6",
-        "dom",
-        "es2016",
-        "es2017"
-      ],
-      "jsx": "react-jsx",
-      "declaration": true,
-      "moduleResolution": "node",
-      "noUnusedLocals": false,
-      "noUnusedParameters": true,
-      "esModuleInterop": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "allowSyntheticDefaultImports": true,
-      "allowJs": true,
-      "skipLibCheck": true,
-      "strict": true,
-      "forceConsistentCasingInFileNames": true,
-      "noFallthroughCasesInSwitch": true,
-      "resolveJsonModule": true,
-      "isolatedModules": true,
-      "noEmit": true
-    },
-    "include": [
-      "src"
-    ],
-    "exclude": [
-      "node_modules",
-      "lib"
-    ],
-    "typeRoots": [
-      "./node_modules/@types/"
-    ]
-  }
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
+}
