--- a/package.json
+++ b/package.json
@@ -1,59 +1,46 @@
 {
-  "name": "mngo-project-toolss",
-  "version": "0.1.1",
-  "main": "dist/index.js",
-  "module": "dist/index.js",
-  "homepage": "./",
-  "files": [
-    "dist",
-    "README.md"
-  ],
-  "private": false,
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:adityasuman2025/MNgoProjectTools.git"
-  },
-  "sideEffects": false,
-  "dependencies": {
-    "crypto-js": "^4.0.0",
-    "dayjs": "^1.10.4",
-    "universal-cookie": "^4.0.4"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "babel-preset-minify": "^0.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false react-scripts build",
-    "babel-build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --extensions '.ts,.tsx,.jsx' --ignore 'src/lib/**/*.test.tsx' --copy-files --no-copy-ignored",
-    "build-publish": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --extensions '.ts,.tsx,.jsx' --ignore 'src/lib/**/*.test.tsx' --copy-files --no-copy-ignored && npm publish"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "mngo-project-tools",
+    "version": "0.9.0",
+    "sideEffects": false,
+    "private": false,
+    "type": "module",
+    "homepage": "./",
+    "files": [
+        "dist",
+        "README.md"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "main": "./dist/index.cjs.js",
+    "module": "./dist/index.es.js",
+    "types": "./dist/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./dist/index.es.js",
+            "require": "./dist/index.cjs.js"
+        },
+        "./dist/style.css": "./dist/style.css"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:adityasuman2025/MNgoProjectTools.git"
+    },
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "build-publish": "rm -rf dist && tsc && vite build && npm publish"
+    },
+    "dependencies": {
+        "crypto-js": "^4.0.0",
+        "dayjs": "^1.10.4",
+        "universal-cookie": "^4.0.4"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.23",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@vitejs/plugin-react": "^3.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.0"
+    }
 }
