verify login auth api done by token and crypto-js moved to devdepend

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mngo-project-tools",
-    "version": "0.9.0",
+    "version": "0.9.1",
     "sideEffects": false,
     "private": false,
     "type": "module",
@@ -17,7 +17,7 @@
             "import": "./dist/index.es.js",
             "require": "./dist/index.cjs.js"
         },
-        "./dist/style.css": "./dist/style.css"
+        "./style.css": "./dist/style.css"
     },
     "repository": {
         "type": "git",
@@ -29,7 +29,6 @@
         "build-publish": "rm -rf dist && tsc && vite build && npm publish"
     },
     "dependencies": {
-        "crypto-js": "^4.0.0",
         "dayjs": "^1.10.4",
         "universal-cookie": "^4.0.4"
     },
@@ -41,6 +40,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "typescript": "^4.9.3",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "crypto-js": "^4.0.0"
     }
 }
