verify login auth api done by token and crypto-js moved to devdepend

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
             "import": "./dist/index.es.js",
             "require": "./dist/index.cjs.js"
         },
-        "./style.css": "./dist/style.css"
+        "./dist/style.css": "./dist/style.css"
     },
     "repository": {
         "type": "git",
