updated read me

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,31 +1,45 @@
 {
     "editor.wordWrap": "on",
     "files.associations": {
-        "*.js": "javascriptreact",
+        "*.js": "javascript",
+        "*.jsx": "javascriptreact",
         "*.ts": "typescript",
         "*.tsx": "typescriptreact",
         "*.sass": "sass",
-        "*.scss": "scss"
+        "*.scss": "scss",
+        "*.css": "css",
+        "*.html": "html",
+        "*.java": "java",
+        "*.json": "jsonc",
     },
     "[javascript]": {
-        "editor.formatOnSave": true,
-    },
-    "[java]": {
         "editor.formatOnSave": true,
     },
     "[javascriptreact]": {
         "editor.formatOnSave": true,
     },
+    "[typescript]": {
+        "editor.formatOnSave": true,
+    },
     "[typescriptreact]": {
         "editor.formatOnSave": true,
     },
-    "[typescript]": {
+    "[css]": {
+        "editor.formatOnSave": true,
+    },
+    "[html]": {
+        "editor.formatOnSave": true,
+    },
+    "[java]": {
+        "editor.formatOnSave": true,
+    },
+    "[jsonc]": {
         "editor.formatOnSave": true,
     },
     "eslint.alwaysShowStatus": true,
     "javascript.format.insertSpaceAfterFunctionKeywordForAnonymousFunctions": false,
     "javascript.updateImportsOnFileMove.enabled": "always",
-    "html.format.enable": false,
+    "html.format.enable": true,
     "scss.lint.float": "warning",
     "scss.lint.duplicateProperties": "warning",
     "css.lint.duplicateProperties": "warning",
