--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mngo-project-tools",
-    "version": "1.2.99",
+    "version": "1.3.00",
     "private": false,
     "sideEffects": false,
     "main": "index.ts",
@@ -15,8 +15,7 @@
     },
     "dependencies": {
         "crypto-js": "^4.0.0",
-        "dayjs": "^1.10.4",
-        "mobile-device-detect": "^0.4.3"
+        "dayjs": "^1.10.4"
     },
     "devDependencies": {
         "@types/node": "^16.18.61",
